adding back-to-top and typing scripts

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <a title="GDPR-compliant Web Analytics" href="https://clicky.com/101452607">
-      <img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+      <img alt="Clicky" src="//static.getclicky.com/media/links/badge.gif" border="0" style="display: none;" /></a>
     <script async data-id="101452607" src="//static.getclicky.com/js"></script>
    
     <div id="root"></div>
