--- a/public/index.html
+++ b/public/index.html
@@ -19,9 +19,10 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <!-- bootstrap css -->
+    <!-- bootstrap css 
     <link rel="stylesheet" href="%PUBLIC_URL%/styles/bootstrap.min.css">
-    <link rel="stylesheet" href="%PUBLIC_URL%/styles/fontawesome-all.min.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/styles/fontawesome-all.min.css">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Tweaks for older IEs-->
    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css">
